--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@govuk-react/icon-crown": "^0.0.7",
     "@types/styled-components": "^5.1.25",
+    "final-form": "^4.20.7",
     "govuk-react": "^0.10.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
+    "react-final-form-listeners": "^1.0.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
