--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@govuk-react/icon-crown": "^0.0.7",
+    "final-form": "^4.20.7",
     "govuk-colours": "^1.1.0",
     "govuk-react": "^0.10.1",
     "next": "12.2.3",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
+    "react-final-form-listeners": "^1.0.3",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
