--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "govuk-colours": "^1.1.0",
     "govuk-react": "^0.10.1",
     "next": "12.2.3",
+    "normalize-css": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
