--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize-css": "^2.3.1",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
+    "react-bootstrap-typeahead": "^6.0.0-rc.3",
     "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-final-form-listeners": "^1.0.3",
