--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.5",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "jest": "^28.1.3",
